explicacion del flujo

--- a/Trabajo_1/Trabajo_1.ipynb
+++ b/Trabajo_1/Trabajo_1.ipynb
@@ -980,8 +980,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "<img src=\"Flujo.png\" alt=\"Flujo de información imagenológica\" style=\"display:block; margin:auto; max-width:90%;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DICOM entra en juego entre el RIS, la modalidad y el PACS: el RIS genera y distribuye la Worklist vía DICOM MWL a la modalidad, ésta adquiere las imágenes y las envía a PACS (y al RIS para registro) usando DICOM C-STORE, notifica el estado del procedimiento con DICOM MPPS, y finalmente el PACS almacena las imágenes a largo plazo y las provee a las estaciones de trabajo mediante DICOM C-GET/C-MOVE o WADO.\n",
+    "\n",
+    "HL7 se utiliza desde el inicio y al cierre del flujo: el HIS comunica al RIS la información del paciente y la orden de estudio con mensajes HL7 ADT (alta/actualización de paciente) y HL7 ORM (solicitud de estudio), y tras la interpretación el RIS entrega al HIS el informe diagnóstico con un mensaje HL7 ORU.\n",
+    "\n",
+    "En cuanto a sistemas y herramientas, en la primera etapa el HIS gestiona altas y órdenes; luego el RIS crea la orden, agenda el estudio, administra la lista de trabajo (MWL) y genera el informe; la modalidad (rayos X, TAC, RM, etc.) consulta la MWL, adquiere las imágenes y comunica con RIS/PACS mediante los servicios DICOM; y por último el PACS archiva esas imágenes y las pone a disposición del radiólogo o del HIS para visualización e integración del informe en la historia clínica."
    ]
   },
   {
